--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,11 +15,11 @@
 
     <!--Styles -->
     <!--    CDN-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+<!--        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">-->
 
     <!--Thymeleaf CSS  -->
-<!--    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}"/>-->
-<!--    <link rel="stylesheet" type="text/css" th:href="@{/css/miquel.css}"/>-->
+    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/miquel.css}"/>
 
     <!--Page Icon-->
     <link rel="icon" th:href="@{/images/favicon.ico}">
@@ -31,19 +31,28 @@
 <!--Top Navigation Bar  -->
 
 
-<!--Title -->
-<div class="container-fluid ">
-    <h3>Weather App</h3>
-    <br>
-    <p th:text = "${body}"></p>
-    <br>
-</div>
-
 <section id="table-content">
     <div class="container">
         <div class="row">
-            <div class="container-fluid col-md-6 col-sml-12">
-                <h4 >Days:</h4>
+            <div class="container-fluid col-lg-8 col-md-8 col-sml-12">
+                <h2 style="margin:100px 0px 40px; text-align:center;">🌊Windsurf summary🏄</h2>
+                <h4 th:text = "${body}" > </h4>
+
+                <div class="container">
+                    <div class="row">
+                        <div class="container-fluid col-6">
+                            <a href="http://35.180.87.109/weather/next_7days/home"    >PAGE - Next seven days</a> <br>
+                            <a href="http://35.180.87.109/weather/current_week/home"  >PAGE - Current week</a> <br>
+                        </div>
+                        <div class="container-fluid col-6">
+                            <a href="http://35.180.87.109/weather/next_7days"         >API - Next seven days</a><br>
+                            <a href="http://35.180.87.109/weather/current_week"       >API - Current week</a><br>
+                        </div>
+
+                    </div>
+                </div>
+                <br>
+
                 <table class = "table table-dark bdr">
                     <thead>
                     <tr>
