--- a/src/main/resources/static/css/miquel.css
+++ b/src/main/resources/static/css/miquel.css
@@ -46,10 +46,6 @@ p{
     padding: 1% 0% 1%;
 }
 
-.paddingMiquel{
-    margin: 6px;
-    padding: 5px;
-}
 
 .list{
     padding: 2% 2%;
@@ -79,3 +75,36 @@ p{
   border-radius: 10px;
   overflow: hidden;
 }
+
+.container{
+    margin: 0px, 0px;
+}
+
+.row{
+    margin: 0px, 0px;
+}
+
+
+
+@media (min-width : 200px)  {
+    .container th, .container td {
+        font-size: 1.3rem;
+      }
+}
+
+@media (min-width : 800px)  {
+    .container th, .container td {
+        font-size: 1.2rem;
+      }
+}
+
+@media (min-width : 1000px) {
+  .container th, .container td {
+    font-size: 1rem;
+  }
+}
+
+
+
+
+
