--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -31,62 +31,56 @@
 <!--Top Navigation Bar  -->
 
 
-<section id="table-content">
-    <div class="container">
-        <div class="row">
-            <div class="container-fluid col-lg-8 col-md-8 col-sml-12">
-                <h2 style="margin:100px 0px 40px; text-align:center;">🌊Windsurf summary🏄</h2>
-                <h4 th:text = "${body}" > </h4>
+<div class="row">
+    <div class="container col-lg-7 col-md-10 col-sml-11">
+        <h2 style="margin:100px 0px 40px; text-align:center;">🌊Windsurf summary🏄</h2>
+        <h4 th:text = "${body}" > </h4>
 
-                <div class="container">
-                    <div class="row">
-                        <div class="container-fluid col-6">
-                            <a href="http://35.180.87.109/weather/next_7days/home"    >PAGE - Next seven days</a> <br>
-                            <a href="http://35.180.87.109/weather/current_week/home"  >PAGE - Current week</a> <br>
-                        </div>
-                        <div class="container-fluid col-6">
-                            <a href="http://35.180.87.109/weather/next_7days"         >API - Next seven days</a><br>
-                            <a href="http://35.180.87.109/weather/current_week"       >API - Current week</a><br>
-                        </div>
-
-                    </div>
+        <div class="container">
+            <div class="row">
+                <div class="container-fluid col-6">
+                    <a href="http://35.180.87.109/weather/next_7days/home"    >PAGE - Next seven days</a> <br>
+                    <a href="http://35.180.87.109/weather/current_week/home"  >PAGE - Current week</a> <br>
                 </div>
-                <br>
+                <div class="container-fluid col-6">
+                    <a href="http://35.180.87.109/weather/next_7days"         >API - Next seven days</a><br>
+                    <a href="http://35.180.87.109/weather/current_week"       >API - Current week</a><br>
+                </div>
 
-                <table class = "table table-dark bdr">
-                    <thead>
-                    <tr>
-                        <th scope = "col">Day of the week</th>
-                        <th scope = "col">Time</th>
-                        <th scope = "col">Conditions</th>
-                        <th scope = "col">Wind speed(10m)</th>
-                        <th scope = "col">Wave height</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="DTO: ${days}">
-                        <td th:text = "${DTO.dayOfTheWeek}"></td>
-                        <td th:text = "${DTO.hour}"></td>
-                        <td th:text = "${DTO.weathercodeIcon}"></td>
-                        <td th:text = "${DTO.windspeed_10m}"></td>
-                        <td th:text = "${DTO.wave_height}"></td>
-                    </tr>
-                    </tbody>
-                </table>
-                <br>
             </div>
         </div>
+        <br>
 
-
+        <table class = "table table-dark bdr">
+            <thead>
+            <tr>
+                <th scope = "col">Day of the week</th>
+                <th scope = "col">Time</th>
+                <th scope = "col">Conditions</th>
+                <th scope = "col">Wind speed(10m)</th>
+                <th scope = "col">Wave height</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="DTO: ${days}">
+                <td th:text = "${DTO.dayOfTheWeek}"></td>
+                <td th:text = "${DTO.hour}"></td>
+                <td th:text = "${DTO.weathercodeIcon}"></td>
+                <td th:text = "${DTO.windspeed_10m}"></td>
+                <td th:text = "${DTO.wave_height}"></td>
+            </tr>
+            </tbody>
+        </table>
+        <br>
     </div>
-</section>
+</div>
+
+
 
 
 
 <!--Bellow Bar -->
-<div>
 
-</div>
 
 </body>
 </html>
