--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Dice Game - @Miquel</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" th:href="@{/css/favicon.ico}">
 
     <!-- Google Texts Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,24 +35,24 @@
 
 <div class="row">
     <div class="container col-lg-7 col-md-10 col-sml-11">
-        <h1 style="margin:100px 0px 40px; text-align:center;">🌊Windsurf summary🏄</h1>
+        <h1 style="margin:100px 0px 40px; text-align:center;">🌊 Windsurf 🏄</h1>
         <h2 th:text = "${body}" > </h2>
 
         <div class="container">
             <div class="row">
                 <div class="container-fluid col-6">
-                    <a href="http://35.180.87.109/weather/next_7days/home"    >PAGE - Next seven days</a> <br>
+                    <a href="http://35.180.87.109/weather/next_days/home"    >PAGE - Next following days</a> <br>
                     <a href="http://35.180.87.109/weather/current_week/home"  >PAGE - Current week</a> <br>
                 </div>
                 <div class="container-fluid col-6">
-                    <a href="http://35.180.87.109/weather/next_7days"         >API - Next seven days</a><br>
+                    <a href="http://35.180.87.109/weather/next_days"         >API - Next following days</a><br>
                     <a href="http://35.180.87.109/weather/current_week"       >API - Current week</a><br>
                 </div>
             </div>
         </div>
         <br>
 
-        <table class = "table table-dark bdr">
+        <table class = "table table-info bdr">
             <thead>
             <tr>
                 <th scope = "col">Day</th>
