--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -35,18 +35,18 @@
 
 <div class="row">
     <div class="container col-lg-7 col-md-10 col-sml-11">
-        <h1 style="margin:100px 0px 40px; text-align:center;">🌊 Windsurf 🏄</h1>
+        <h1 style="margin:85px 0px 40px; text-align:center;">🌊 Windsurf 🏄</h1>
         <h2 th:text = "${body}" > </h2>
 
         <div class="container">
             <div class="row">
                 <div class="container-fluid col-6">
-                    <a href="http://35.180.87.109/weather/next_days/home"    >PAGE - Next following days</a> <br>
-                    <a href="http://35.180.87.109/weather/current_week/home"  >PAGE - Current week</a> <br>
+                    <a class="scale" href="http://35.180.87.109/weather/next_days/home"    >PAGE - Following days</a> <br>
+                    <a class="scale" href="http://35.180.87.109/weather/current_week/home"  >PAGE - Current week</a> <br>
                 </div>
                 <div class="container-fluid col-6">
-                    <a href="http://35.180.87.109/weather/next_days"         >API - Next following days</a><br>
-                    <a href="http://35.180.87.109/weather/current_week"       >API - Current week</a><br>
+                    <a class="scale" href="http://35.180.87.109/weather/next_days"         >API - Following days</a><br>
+                    <a class="scale" href="http://35.180.87.109/weather/current_week"       >API - Current week</a><br>
                 </div>
             </div>
         </div>
