--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -17,7 +17,7 @@
 
     <!--Styles -->
     <!--    CDN-->
-<!--        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">-->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">-->
 
     <!--Thymeleaf CSS  -->
     <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}"/>
@@ -32,7 +32,6 @@
     <div class="row">
         <div class="container col-lg-7 col-md-10 col-sml-11">
             <h1 style="margin:85px 0px 40px; text-align:center;">🌊 Windsurf 🏄</h1>
-<!--            <h2 th:text = "${body}" > </h2>-->
 
             <div class="container">
                 <div class="row">
@@ -124,6 +123,7 @@
 
             <div class="container" style="margin: 8px 0px 0px 0px; padding: 0px">
                 <p>* Wind: km/h and  Wave: m</p>
+                <p>* Days filtered by: Wave: 0 - 0,6 m, Wind: 12-27 km/h, WeatherCode: Sunny, mainly Clear, partly cloudy, overcast</p>
                 <p>* If you subscribe, you will receive a weekly summary email every Friday, which will list the best days for practicing windsurfing. To unsubscribe, simply enter your email again, and you will be immediately removed from our database.</p>
             </div>
 
@@ -158,7 +158,6 @@
 
 
 <!--Bellow Bar -->
-
 
 
 </body>
